--- a/src/util/index.scss
+++ b/src/util/index.scss
@@ -6,3 +6,4 @@
 @import "../components/ColorGenerator/ColorGenerator";
 @import "../components/Color/Color";
 @import "../components/Palette/Palette";
+@import "../components/PaletteColor/PaletteColor";
