--- a/src/components/Palette/_Palette.scss
+++ b/src/components/Palette/_Palette.scss
@@ -1,6 +1,34 @@
 .Palette {
 	font-family: sans-serif;
-  font-size: 16px;
-  width: 250px;
-  height: 250px;
+	font-size: 16px;
+	width: 200px;
+	height: 325px;
+  border: 1px solid red;
+  display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding: 10px;
+	align-items: center;
+}
+
+.Palette-header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.Palette-teardrop-container {
+	height: 85%;
+}
+
+.Palette-title {
+	margin: 5px 0 0 0;
+}
+
+.Palette-button-container {
+	height: 15%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  width: 100%;
 }
