--- a/src/util/index.scss
+++ b/src/util/index.scss
@@ -7,3 +7,20 @@
 @import "../components/Color/Color";
 @import "../components/Palette/Palette";
 @import "../components/PaletteColor/PaletteColor";
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  line-height: 1.4;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+}
