--- a/src/components/Palette/_Palette.scss
+++ b/src/components/Palette/_Palette.scss
@@ -8,13 +8,13 @@
 	flex-direction: column;
 	padding: 10px;
 	align-items: center;
-	color: $main-font;
+  color: $main-font;
+  transition: transform $zoom-transition-time;  
 
 	&:hover {
 		box-shadow: 0 0 3px $shadow-grey;
-		transition: transform .15s;
 		transform: scale(1.05);
-	}
+  }
 }
 
 .Palette-header {
@@ -22,7 +22,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-direction: column;
+  flex-direction: column;
 	cursor: default;
 }
 
@@ -32,6 +32,7 @@
 }
 
 .Palette-title {
+  font-weight: 500;
 	margin: 5px 0 0 0;
 	text-align: center;
 }
