--- a/src/components/ColorGenerator/_ColorGenerator.scss
+++ b/src/components/ColorGenerator/_ColorGenerator.scss
@@ -1,7 +1,11 @@
 .ColorGenerator {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
-	height: 450px;
+  height: 475px;
+
+  & button {
+    padding: 0;
+  }
 }
 
 .ColorGenerator-colors {
@@ -10,24 +14,23 @@
 	height: 400px;
 	grid-template-rows: 400px 25px;
 	grid-row-gap: 20px;
+	border-radius: 50px;
 }
 
 .ColorGenerator-form {
-  padding: 0 25px;
-  
-  & label {
-    display: block;
-    margin-bottom: 5px;
-  }
+	padding-left: 25px;
+
+	& label {
+		display: block;
+		margin-bottom: 5px;
+	}
 }
 
 .ColorGenerator-form-container {
-  margin-bottom: 25px;
+	margin-bottom: 25px;
 }
 
-.ColorGenerator-form-input {
-	height: 40px;
-	width: 200px;
-	width: 100%;
-	padding-left: 15px;
+.ColorGenerator-form-input,
+.ColorGenerator-button {
+	@include input-style;
 }
