--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -22,15 +22,19 @@ select {
 label {
 	margin-top: 15px;
 }
+
 img {
 	width: 25px;
+	margin-right: 15px;
 }
+
 button {
 	background: white;
 	transition: background 0.5;
-}
-button:hover {
-	background: rgb(241, 241, 241);
-	border: 1px solid rgb(217, 217, 217);
-	transition: border 0.5;
+	cursor: pointer;
+	&:hover {
+		background: rgb(241, 241, 241);
+		border: 1px solid rgb(217, 217, 217);
+		transition: border 0.5;
+	}
 }
