Add styles for buttons

--- a/src/components/PaletteView/_PaletteView.scss
+++ b/src/components/PaletteView/_PaletteView.scss
@@ -9,3 +9,13 @@
 .PaletteView-edit-form {
 	display: flex;
 }
+
+.PaletteView-button {
+	@include input-style;
+	width: 250px;
+	margin-left: 15px;
+}
+
+.PaletteView-edit-button {
+	width: 100px;
+}
