--- a/src/components/PaletteView/_PaletteView.scss
+++ b/src/components/PaletteView/_PaletteView.scss
@@ -14,6 +14,10 @@
 	@include input-style;
 	width: 250px;
 	margin-left: 15px;
+
+	&:first-child {
+		margin-left: 0;
+	}
 }
 
 .PaletteView-edit-button {
